tests/NormalTests/paczka2/big_fuzzy/35427139.err
Error in line 15: HSFK2laDY A952 76,5
Error in line 19: YMpPkS69397,3
Error in line 29: A952 S141 34,4
Error in line 18: HSFK2laDY S693 86,0
Error in line 39: HSFK2laDY A952 91,8
Error in line 51: wsvWEPKn S111 69,5
Error in line 65: FagsKQx S141 50,2
Error in line 63: SZSV3gPn S111 29,4
Error in line 72: SZSV3gPn A952 24,9
Error in line 73: SZSV3gPn S111 9,7
Error in line 77: A952 S141 83,3
Error in line 76: wsvWEPKn S693 6,0
Error in line 82: wsvWEPKn S111 85,9
Error in line 79: A952 S693 75,3
Error in line 86: A952 A952 63,5
Error in line 100: wsvWEPKn S141 246,2
Error in line 109: wsvWEPKn A952 215,91
Error in line 103: wsvWEPKn A952 57,2
Error in line 114: 8FqZztOGL S141 18,6
Error in line 120: 8FqZztOGL S111 11,4
Error in line 91: HSFK2laDY S141 7,9
Error in line 149: 8FqZztOGL S693 66,3
Error in line 155: wsvWEPKn S693 13,1
Error in line 157: wsvWEPKn S111 39,3
Error in line 178: YMpPk S69t t4,6
Error in line 176: wsvWEPKn A952 64,7
Error in line 180: YMpPk S693 139,4
Error in line 183: YMpPk A952 36,4
Error in line 175: FagsKQx S141 88,6
Error in line 173: 8FqZztOGL S111 43,1
Error in line 192: 8FqZztOGL S693 24,55
Error in line 184: YMpPk S111 81,4
Error in line 189: wsvWEPKn S111 141,4
Error in line 201: YMpPk S111 43,2
Error in line 205: YMpPk S693 79,8
Error in line 203: HSFK2laDY S141 48,1
Error in line 213: wsvWEPKn S111 94,9
Error in line 223: FagsKQx S693 80,9
Error in line 239: A952 S111 37,0
Error in line 209: 8FqZztOGL S693 19,3
